my first commit with expo

--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "expo": {
     "name": "food-app",
+    "privacy": "public",
+    "description": "this app allows you to order food online at will",
     "slug": "food-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,9 +15,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
